# cpp-labs-1-autumn

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompileOptions.cmake
extras/cli11/: CMakeLists.txt
extras/googletest/: CMakeLists.txt
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  main.cpp
src/libcalc/: CMakeLists.txt  sum.cpp  sum.hpp
src/librdb/: CMakeLists.txt  Token.cpp  Token.hpp  rdbtoken.cpp  rdbtoken.hpp  sum.cpp
src/librdb/lexer/: Lexer.cpp  lexer.cpp  lexer.hpp
src/librdb/parser/: Error.cpp  Error.hpp  Parser.cpp  Parser.hpp  SqlStatement.cpp  SqlStatement.hpp
src/sql_parser/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/libcalc/: sum.test.cpp
tests/librdb/: rdbtoken.test.cpp  sum.test.cpp
tests/librdb/lexer/: Lexer.test.cpp  lexer.test.cpp
tests/librdb/parser/: Parser.test.cpp
